# ChangeLog for app-text/landslide
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/landslide/ChangeLog,v 1.6 2015/05/23 12:37:04 mrueg Exp $

  23 May 2015; Manuel Rüger <mrueg@gentoo.org> -landslide-1.0.0.ebuild,
  -landslide-1.0.1.ebuild:
  Remove old.

  04 Mar 2013; Chema Alonso <nimiux@gentoo.org> landslide-1.1.1.ebuild:
  Stable for amd64 wrt bug #460206

*landslide-1.1.1 (20 Nov 2012)

  20 Nov 2012;  <naota@gentoo.org> +landslide-1.1.1.ebuild,
  landslide-1.0.1.ebuild:
  Version bump.

  27 Jun 2012; Naohiro Aota <naota@gentoo.org> landslide-1.0.0.ebuild,
  landslide-1.0.1.ebuild:
  Handle python version peroperly even when python3 is set for system default.
  Patch by Alexander Sulfrian. #423005; Use vcs-snapshot.eclass to unpack the
  source.

*landslide-1.0.1 (19 Nov 2011)

  19 Nov 2011; Naohiro Aota <naota@gentoo.org> +landslide-1.0.1.ebuild:
  Version bumped.

*landslide-1.0.0 (15 Sep 2011)

  15 Sep 2011; Naohiro Aota <naota@gentoo.org> +landslide-1.0.0.ebuild,
  +metadata.xml:
  New package app-text/landslide-1.0.0