@@ -1,4 +1,26 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
 DIST landslide-1.1.1.tar.gz 156083 SHA256 b7860c6eef973b7deb286d8a32b95c4ccab0cb8460844299b36b0d48e9109b02 SHA512 de0ef010589150bf4fa31e9e7fc4b4261ac3cebe91cc8d02745f3ab1f723a811c8d2117cc61a95c5b21c7e34a0fd280640e13a649efb4bc0de7d15e9a2a1548b WHIRLPOOL e12706a23cff2c5785cd8c4192104c7c000c2eb342e58b110c24ad1eada720308a96ddcf94251fd93b4a42e8235ea3e52cbce075d744a8804a5c108fee49d967
 EBUILD landslide-1.1.1.ebuild 740 SHA256 3fb7166a96cfdbcd146fd8bdb742bd7a89740722e32d864d8419ba11edc485a8 SHA512 0586e33c8ab4468fcb301d7a951a19b968d679b7edff1ea97551916dcd641cfbb4fea4670a0f466f91496689d42a4243b70ad76be548de33ff7c02eb0d66713d WHIRLPOOL fd9855344cded1b8b9ed48d62faafcdd9bda3e2c9ed244ce8655b6e3540e0326f3a48770d2c9d6a82a33aaa11ff2c62406a22d7ccdc3e3a4900e093bf9069e76
-MISC ChangeLog 1114 SHA256 1628339d7c1db5004240609dc7122836ffe195282f45aca2faea11abcd4ee64a SHA512 dd25984c12e759c8c97f8b901d0c44f43a8ff847b976abf798ad8f54096444a1595c4c596d81b013b4ffcea915dbced90e52022d20157c7a226c0317a99e1442 WHIRLPOOL a4b94e2812708d26bed677273dc000c483c79417a769bd94f8734192c1a80c2460da0c197f8ecb174c01fd9a7a07601ee9000f054c6403938c42902e67751ea6
-MISC metadata.xml 200 SHA256 18465d6d340f50cd04424fa8fae519ab58e37da2a4c4bdf318a9467e5362292d SHA512 967200ffa0f8608e9f3cd7a9f07ebc35f549e00ae4f1589149e39340b0e8b5dc4c473c896e8653fe0313aa134e28595b74d28a38204ab0448fe80c33ceb3f948 WHIRLPOOL 631cfe7979649bcfc35cb3cf5eec6c2d4526063dbea437c4dca72ce9e49aa0d86ddab5e36a5ea8b87a2df421faab6d12afae16f5511946c2a6f97eedb7ab1b21
+MISC ChangeLog 1217 SHA256 e93097846041a62ba534e00aaa9f41d6b15d79584651386572aa346e3dddfcb4 SHA512 f9d3980c82ce6cfe9832cf15b02537f7b46a54af1d3603da1b883ad1f0cced1ff77ef4889476aeedd5f90abc1681928143a8a935b059e6b1a7d20f0e3fd88cab WHIRLPOOL efb036dda67e4bd984542988785285a065138ea86b9fd0ead4478122079013f34d9bd0918bb0fb79daf364846dc2f66bde89467e7806c7d4db57ee97292bdffc
+MISC metadata.xml 292 SHA256 2dad850cef77997ccd94d1f12b5317cab71c738e8c9bc6c778e0c1968d9b5ca6 SHA512 b98e5e1576aec9c14c60a2ef39145fd44ba643462eafe0f5518dbe89406dbe2b3cc1e844b0baa3a8763864ae962b8eab6bc1290a24fbe0f6e40f41aaa303a342 WHIRLPOOL b953d3ca92b6adac0e2a513b76580ecd1e86d0d1e435422e1845ba6977c2463591b061d88ac0b5a5aa094e0b148ab40bef186b715c11afc6ab2562bd1a649110
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0
+
+iQJ8BAEBCgBmBQJVcqkXXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0QUU0N0I4NzFERUI0MTJFN0EyODE0NUFF
+OTQwMkE3OUIwMzUyOUEyAAoJEOlAKnmwNSmimn8P/j6ttI3a5BPLl+y2BLXjkxSe
+wCEYLmEGcJTL3ETuBsu5QeMeG9ypW8BSrfl6Lj9TBFAKS4rSo7k/pFXR34AllT3K
+7VUfVx9o1oas/0yNUQNBT1yID+Q+MFcLF7p5gUBptmclEhbM+mcibVtM2+0n8CBd
+Y/2fNtFpuipJ0VBvmUwiUCqmREELwY0kpOXfwyWgmraj8VV7ok8cY6H2kqui3nt2
+7tsV3dp1S3MVsfLXv2/pFjI3pFP4ONp0FPiu+iR/9H4ihdrKvnk9i26jE+lPtzPl
+czsC7YIx1xV3Du7ZRg7xrtcI5ARSx2ag/qCcOBhXY0ckF2gaQjZ0zokbIFm1ax+A
+FyBT1/V+5SPFX+Ym3RmPYsfYcZgz1OWLqJ9Rtmrbpk5xqQ9YwaYhiQWqmcZaibbn
+ZmtbTmPSGc84+kiq/rJ7vTt+mtmPFDElXKs0i0PGYnRKGD9OZmDZpdYeOA8ARsps
+RvxbaWPbdwBNfL/5khTYUpDnwJ7XTzpHatKWn1xtDHsVcR3AG1ehxq4/jCMkeRXF
+EEQhK10YkwjrxRsTNkqeLMlQhghcLMlvTnPUbW5tOk4x6QCOTMV4uuQrYunYkdwD
+idzw3UzMvdC3zEalM3cwpFObUbiTR8R71ZrOGs+eI+rRatI7lJcI3zPDlZprzIHA
+LqpJ0yQWBCBN7nK6gl4m
+=JR/7
+-----END PGP SIGNATURE-----
