@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<maintainer>
-  <email>naota@gentoo.org</email>
-</maintainer>
+  <maintainer>
+    <email>naota@gentoo.org</email>
+  </maintainer>
+  <upstream>
+    <remote-id type="github">adamzap/landslide</remote-id>
+  </upstream>
 </pkgmetadata>
