@@ -1,28 +1,28 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 DIST paperwork-0.2.3.tar.gz 164350 SHA256 92f7ef27d26b9b4d3e1d4f87b2788e47cfef0fb386ca813daf02e486e791ccf6 SHA512 e9b423dc35b1c952eca93a891b94b1d25d1af612c22671ccae0b37a32bc29ceb800d0ab9a300d12d0eb4dceb45843ef4123c1796f94a82a40292ad3848ba7d12 WHIRLPOOL 3d1f07a89e9a3177fc4c10d699328ce91e27e76fcb2b6ae704e7f12e11bcbd48fafc88ef07cf6c4903d9c8d7774e7daa47b8ce5bd7fb694ab303cbff8c6c6f94
 DIST paperwork-0.2.4.tar.gz 164449 SHA256 361970a69995ead1a07a9fe63dde1055110194e447bbfb357b95ac45918ce23c SHA512 a21875f78e38ef77c05f21b57491fa89b7bb9ceeda5d577cd1082825b7df7e56ce9a7a2f7477b066b81a8858183607a25e999e0f851848393c155c9f8588b634 WHIRLPOOL f9b02780437feb0fb0eba2a2a436cf855d0efde85877f8d6533fb613110171e2ec9bf1dff31ffab5e5e21c1d7ac180f42eb5eed38a0416e6cba41cc36fadefa2
 EBUILD paperwork-0.2.3.ebuild 1223 SHA256 5415f36d14d9431aa82d9faba78665ac65d3c35800821adcce9053f4b266f6bb SHA512 30ab9aa8d0c15c08dbf611369f6f3a4dba57fa50865f0575babcc03dd87e8a491258ed9e4e55688d962533dad29f07c548cbdb2b70860cf97bf4e1105a722601 WHIRLPOOL e2284da907f0722fd741932b9ece37c786aa634d64c8ba864e764ce8ac0d9e82b4d5c5399c9175979a0cb49c0a65e4d1d561b20ec7314093671442a6c1308752
 EBUILD paperwork-0.2.4.ebuild 1216 SHA256 cdadd01054724b8ea76474170bea55a0f4a138cc02759e10efb60221e69c1ce4 SHA512 1cb2e1c81b1de47c62b3d6087984ad1b880e8676d6d7c5a38fdf096c37cbb02dbd42dcf1850f8f089e753e68c1dc9afe4af79823ac136c4a8df3207d22a2cf81 WHIRLPOOL 1f42c8f4118c0413c535ed736d70ae965306fd5c3a00050c6551ae0d08ea839c20b56a88dab9fe3d14f72c477104b071859b4ec9340021222db3b8fb02f9f143
-MISC ChangeLog 1718 SHA256 77fdd11cc77752d21f473aede4c27d4713a385dac62e993dd33e84bdd4f9e141 SHA512 978c06221aeaf3a54197b511f03113882c507b20b397554e2c1eb96469f90937bfb2632ec60b9a50722b89e074736a203770790574ec32943dfa4f15f8917f45 WHIRLPOOL ecfe16d91c0fdc1b74654bc924adbaa488155d90a5de2d0e9af63b22056a9310e5af2a06b0febcc173aee449b00b4af93db222816b61b4ea061cc5acc6b8f287
-MISC metadata.xml 614 SHA256 5cbb8190013cb96307a31703af30ea3080191553a681a4bb0d74dac7d90c445b SHA512 793ab70d133d0717172e02857aa95f3db484e82440cd89433bbbc03639eab4bc1db7383661c3e4c6ed039ceaf2b3b3d32a57576d400f374429b1179803ea0617 WHIRLPOOL a74b60b90742f46c1fc0000b9de824dd9cf2307b612ccbe57f3953dd3eaf290a8e77340a57eadfce8a8a45cbffa766a14e94b7cc5861ae1ad1376d4b90f20f80
+MISC ChangeLog 1818 SHA256 d80aa5257d448cbd7cea6e86469aa75f0ea1f22a1820b0067f449b6eff6e1682 SHA512 340d17f6b34cd14f49928a0e13b5320cab3837e74fda5a3e993c88aa03b2eef871db624ccb1ef1a912e3649d5aae230c433d8390ce4eaa6fe6f7a9a4f92c2132 WHIRLPOOL a067b717801cd166cb9ba00b79ec4f30b33d4e2a252f03a3343c290501efb1b53629b5991c257bd8fbeca41054ad5c4c4df29d2aea9e2c17db41700e0ce81450
+MISC metadata.xml 707 SHA256 a4d023356814c03038ac85393707cc88233fc5296f95d684b13521706c08aec3 SHA512 a90e1944bbbe0c30ff6666126c29043a152f5bc520f7358dedb42d12d75b6bbbc5fdfc96691d7e6887d5b8f3a0a5851437d0922a41ae06a5bd09adba39646ee8 WHIRLPOOL 4dad5fd8b84f0d55b56499f30da811f20245125440cd400f704be2825fc7cc9f913fecf518cd7b38ade406c9c141881e0fcd616f4cab15282954096c43241c29
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.1
+Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJVV5qrXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXREMzFDRDFGNEQwRTAyNjc2QzRDNjRFQzAw
-MEY3QUIzMzFCMEYwOTdGAAoJEAD3qzMbDwl/yOEQAIL/qYE1/mP2s+gEle50RNc1
-hBkVCGylNjeniMXGnsRVFnb7qbnTQ5BNCZXZqww8scLYO5Mn0uhywVq2iDkFrlYG
-AkVXs56eQ2fOofZJEqidtFIJSxLagDvDAVlkvVsPIo344AIAo/4b+Pr5X7u75UBL
-yf3/WecpAewwcOBoLFylb0EoD7+Eo7FG7YaYykP6SJVQQ05RwAm67+64k5hrjQEv
-nxMX6RhBcxYxod8m/QYExFbG/xhFJti4lO2du5DF3riKuROHObrlIXDsFhf3wHMt
-nsg/d65tWaT4i9ZTBqkHDRTrUNX64E3YPSHdzbOHtckO4JSb00XTPDKaqgMbvQPb
-CZLD7b7wZmUkSX3ANsoDlbMco21QLIp9DvRPA32wKcoCbUqz1gloetdyIMEfZaPb
-GwmRDZPtSX4n+EBv/AwmvRLHZSWzDL7K+RxYErtYyHU7lYCaVpBlEUZpT3C6fLG/
-+K9xraMFK5RydOnqqYldpjfqRujZz7UKIvTV/U4NVdXGN0pxOUjsRVd/RNZ8aHIH
-gGoeUwZNshaU/63Yy9jvWYcQKv7B4N4Yc3F+OYDLqq5ElsUCPtXY4KIs7EKrlBFY
-ArO3e0mjLkXcJPdxgT8fZ4D1PqzqwmbBA0zsvBGZ36QJHGUIfgiZOTyJrSCGpA+l
-q/ac8skU1UsObVW2IJZN
-=um6Z
+iQJ8BAEBCgBmBQJVcqnjXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0QUU0N0I4NzFERUI0MTJFN0EyODE0NUFF
+OTQwMkE3OUIwMzUyOUEyAAoJEOlAKnmwNSmiclQQAJY9K1dTNWJ0nLhWmLXMHjgC
+B7TWh3SYMDPsLlZrrCQyLKwOrGFFokVIxuGxjCN1k+srsOZbS3huxDYXYQwGiEOq
+NEALesP+A0LYG4vBPzwH82gzahJoXmHb837EN2h0is91AKtf1q1jcn8D/zLZywQk
+htzXVzC/8gLslfo4V3IQKDWPfqXCdjiaqMxwNcYUa+udksZ8VAdYH7e7cCGPPSEV
+VxjB9gyhHdSsmgJvn2VnP7HH2vQrgM1VR4zzr3A40vwW8un5PK4GifBgRw97rpIV
+3IUdMaEUmmxXZ0ArHpvSDMlXdsvC7d0dUTLf3lu7f2gs9XZO5k+9j8iOHUVRIQ4X
+TJSniB8PLCYkVoMP0UiKATddT/aqw7SAfoIkVtTfu5k77G5+GxvxvNziFqTdqZeo
+Wo9FOzDaeBUEYv9BN5RY2zv4m3Rz/TimdTPGlDZNFLmAwaGbG22SCyQjEkoglIbW
+i1YO5xvWgtDEfIW8paTjE6v96uCn6ZoE9ds6JnlL4H+Tcgu0AaA4h9K5uJYWxzsT
+jQPmP4dPNv4R6Idb79mDHGh/5NdQdegV/9i4X1aq93z0BKYZM3+SZJ/FWfm8NFv3
+KUcoygzW4gK7XVP+cwh8WSSVe3Wvnl1iXLTYd5xQ6Ob7hwR4yDrBP8qGYMteYtx1
+F39igpiYzFEulYs4JWqb
+=Le92
 -----END PGP SIGNATURE-----
