@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<maintainer>
-		<email>voyageur@gentoo.org</email>
-		<name>Bernard Cafarelli</name>
-	</maintainer>
-	<longdescription lang="en">
+  <maintainer>
+    <email>voyageur@gentoo.org</email>
+    <name>Bernard Cafarelli</name>
+  </maintainer>
+  <longdescription lang="en">
 Paperwork is a personal document manager for scanned documents (and PDFs).
 
 It's designed to be easy and fast to use. The idea behind Paperwork is "scan and forget": You should be able to just scan a new document and forget about it until the day you need it again.
 
 In other words, let the machine do most of the work for you.
 </longdescription>
+  <upstream>
+    <remote-id type="github">jflesch/paperwork</remote-id>
+  </upstream>
 </pkgmetadata>
